sumo/tests/traci/VariableRetrieval/MeMeDetector/errors/UnknownAD/testclient_out.traci
TraCITestClient output file. Date: Tue Mar 10 14:58:17 2009


-> Command sent: <SimulationStep>:
  TargetTime=48.00 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <GetVariable>:
  domID=161 varID=16 objID=xxx
.. Answered with error to command (161), [description: Areal detector 'xxx' is not known]

-> Command sent: <SimulationStep>:
  TargetTime=49.00 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
